--- a/imaginary/bernouilli/Makefile
+++ b/imaginary/bernouilli/Makefile
@@ -4,7 +4,7 @@ include $(TOP)/mk/boilerplate.mk
 # Override default SRCS; the default is all source files, but
 # we don't want to include paraffins.c
 SRCS=Main.hs
-SRC_RUNTEST_OPTS += 500
+PROG_ARGS += 500
 
 include $(TOP)/mk/target.mk
 
