--- a/real/compress/Makefile
+++ b/real/compress/Makefile
@@ -1,6 +1,8 @@
 TOP = ../..
 include $(TOP)/mk/boilerplate.mk
 
+SRC_RUNTEST_OPTS += -stdout-binary
+
 SRCS = BinConv.hs BinTest.hs Decode.hs Defaults.hs Encode.hs Main.hs PTTrees.hs Uncompress.hs
 
 Lzw_HC_OPTS = -cpp
