--- a/real/fulsom/Makefile
+++ b/real/fulsom/Makefile
@@ -1,6 +1,8 @@
 TOP = ../..
 include $(TOP)/mk/boilerplate.mk
 
+SRC_RUNTEST_OPTS += -stdout-binary
+
 SRC_HC_OPTS += -cpp
 
 # Bah.hs is a test file, which we don't want in SRCS
