--- a/spectral/mandel/Makefile
+++ b/spectral/mandel/Makefile
@@ -1,6 +1,8 @@
 TOP = ../..
 include $(TOP)/mk/boilerplate.mk
 
+SRC_RUNTEST_OPTS += -stdout-binary
+
 # Override SRCS so that we don't link in MandelOld.hs
 SRCS = Main.lhs Mandel.lhs PortablePixmap.lhs
 
