get a cut-down parallel benchmark suite going

--- a/parallel/partree/Makefile
+++ b/parallel/partree/Makefile
@@ -1,12 +1,8 @@
 TOP = ../..
 include $(TOP)/mk/boilerplate.mk
--include opts.mk
 
-# Override default SRCS; the default is all source files
-#SRCS=Tree.hs partree.hs
-SRC_RUNTEST_OPTS = 120 120
-WAY_mp_SRC_RUNTEST_OPTS = +RTS -qt2 -RTS
-SRC_HC_OPTS += -package concurrent
+PROG_ARGS = 300 100
+SRC_HC_OPTS += -package parallel
 
 include $(TOP)/mk/target.mk
 
