--- a/parallel/Makefile
+++ b/parallel/Makefile
@@ -1,10 +1,15 @@
 TOP = ..
 include $(TOP)/mk/boilerplate.mk
 
-# ToDo: fix these subdir: cfd dcbm linsolv
-SUBDIRS =  par001 pfib ray prsa soda soda7 coins minimax \
-          parfact bom NESL
+SUBDIRS = parfib partree sumeuler matmult ray prsa
+# partak: program needs work to make it parallel
+
+# bom: bill of materials?
+# par001: looks like a test, not a benchmark
+# coins: needs updating
+# parfact: parallel factorial
+# soda, soda7: small word-search algorithm
+# minimax: looks like it was written for GRIP, needs a lot of updating
+# NESL: a collection of benchmarks based on NESL examples
 
 include $(TOP)/mk/target.mk
-
-
