--- a/parallel/minimax/Makefile
+++ b/parallel/minimax/Makefile
@@ -1,5 +1,7 @@
 TOP = ../..
 include $(TOP)/mk/boilerplate.mk
--include opts.mk
+
+SRC_HC_OPTS += -package parallel
+
 include $(TOP)/mk/target.mk
 
