--- a/parallel/parfib/Makefile
+++ b/parallel/parfib/Makefile
@@ -1,10 +1,7 @@
 TOP = ../..
 include $(TOP)/mk/boilerplate.mk
--include opts.mk
 
-# Override default SRCS; the default is all source files
-SRCS=Main.hs
 SRC_RUNTEST_OPTS += 43 11
-SRC_HC_OPTS += -package concurrent
+SRC_HC_OPTS += -package parallel
 
 include $(TOP)/mk/target.mk
