--- a/parallel/ray/Makefile
+++ b/parallel/ray/Makefile
@@ -1,5 +1,8 @@
 TOP = ../..
 include $(TOP)/mk/boilerplate.mk
--include opts.mk
+
+PROG_ARGS = 1000
+SRC_HC_OPTS += -package parallel
+
 include $(TOP)/mk/target.mk
 
