--- a/parallel/Makefile
+++ b/parallel/Makefile
@@ -2,8 +2,12 @@ TOP = ..
 include $(TOP)/mk/boilerplate.mk
 
 SUBDIRS = parfib partree sumeuler matmult ray prsa
+
 # partak: program needs work to make it parallel
 
+# --------------
+# Old benchmarks we need to either update or kill:
+# 
 # bom: bill of materials?
 # par001: looks like a test, not a benchmark
 # coins: needs updating
@@ -11,5 +15,6 @@ SUBDIRS = parfib partree sumeuler matmult ray prsa
 # soda, soda7: small word-search algorithm
 # minimax: looks like it was written for GRIP, needs a lot of updating
 # NESL: a collection of benchmarks based on NESL examples
+# --------------
 
 include $(TOP)/mk/target.mk
