--- a/smp/Makefile
+++ b/smp/Makefile
@@ -3,12 +3,13 @@ include $(TOP)/mk/boilerplate.mk
 
 SUBDIRS = \
 	sieve \
-	stm001 \
 	callback001 \
 	threads001 \
-	threads003
+	threads003 \
+	threads006
 
 # later:
+#  stm001
 #  stm02
 
 # Not a good benchmark, can go really slowly for random reasons:
