--- a/parallel/Makefile
+++ b/parallel/Makefile
@@ -1,7 +1,11 @@
 TOP = ..
 include $(TOP)/mk/boilerplate.mk
 
-SUBDIRS = parfib partree sumeuler matmult ray gray prsa mandel queens
+SUBDIRS = parfib partree sumeuler matmult ray gray prsa mandel queens coins
+
+# CPP SYMBOLS
+#
+#  -DSTRATEGIES_2  to use the version 2 strategies library (default is 3)
 
 # partak: program needs work to make it parallel
 
