Remove ghc from the list of gc tests, as it has bitrotted

--- a/gc/Makefile
+++ b/gc/Makefile
@@ -1,7 +1,8 @@
 TOP = ..
 include $(TOP)/mk/boilerplate.mk
 
-SUBDIRS= circsim constraints fibheaps fulsom gc_bench happy lcss power spellcheck ghc
+SUBDIRS= circsim constraints fibheaps fulsom gc_bench happy lcss power spellcheck
+# Bitrotted: ghc
 
 # Discount treejoin: runs too quickly to see any speedup beyond a few procs
 # Discount linear: heap is too small
