fix compile with GHC 7.0

--- a/parallel/minimax/Makefile
+++ b/parallel/minimax/Makefile
@@ -1,7 +1,7 @@
 TOP = ../..
 include $(TOP)/mk/boilerplate.mk
 
-SRC_HC_OPTS += -package parallel
+SRC_HC_OPTS += -package parallel -package random
 
 PROG_ARGS = 4 6
 
