--- a/gc/Makefile
+++ b/gc/Makefile
@@ -1,7 +1,7 @@
 TOP = ..
 include $(TOP)/mk/boilerplate.mk
 
-SUBDIRS= circsim constraints fibheaps fulsom gc_bench happy lcss power spellcheck
+SUBDIRS= circsim constraints fibheaps fulsom gc_bench happy lcss power spellcheck \
 	 mutstore1 mutstore2
 # Bitrotted: ghc
 
