--- a/smp/tchan/Makefile
+++ b/smp/tchan/Makefile
@@ -5,5 +5,6 @@ FAST_OPTS = 100000
 NORM_OPTS = 5000000
 SLOW_OPTS = 50000000
 
-include $(TOP)/mk/target.mk
+SRC_HC_OPTS += -package stm
 
+include $(TOP)/mk/target.mk
