--- a/fibon/Repa/_RepaLib/bmp/bmp.cabal
+++ b/fibon/Repa/_RepaLib/bmp/bmp.cabal
@@ -1,5 +1,5 @@
 Name:                bmp
-Version:             1.1.1.1
+Version:             1.2.0.2
 License:             MIT
 License-file:        LICENSE
 Author:              Ben Lippmeier
@@ -8,7 +8,7 @@ Build-Type:          Simple
 Cabal-Version:       >=1.6
 Stability:           stable
 Category:            Codec
-Homepage:            http://code.haskell.org/~benl/code/bmp-head
+Homepage:            http://code.ouroborus.net/bmp
 Bug-reports:         bmp@ouroborus.net
 Description:
 	Read and write uncompressed BMP image files. 100% robust Haskell implementation.
@@ -16,7 +16,7 @@ Description:
 Synopsis:
         Read and write uncompressed BMP image files.
 
-Tested-with: GHC == 6.12.1
+Tested-with: GHC == 7.2
 
 Library
   Build-Depends: 
@@ -25,13 +25,14 @@ Library
         binary               >= 0.5.0.2 && < 0.6.0.0
 
   ghc-options:
-        -Wall -fno-warn-missing-signatures -fno-warn-missing-fields
+        -Wall -fno-warn-missing-signatures
 
   Exposed-modules:
         Codec.BMP
 
   Other-modules:
         Codec.BMP.Base
+        Codec.BMP.Compression
         Codec.BMP.BitmapInfo
         Codec.BMP.BitmapInfoV3
         Codec.BMP.BitmapInfoV4
