--- a/fibon/Repa/_RepaLib/repa-algorithms/repa-algorithms.cabal
+++ b/fibon/Repa/_RepaLib/repa-algorithms/repa-algorithms.cabal
@@ -1,5 +1,5 @@
 Name:                repa-algorithms
-Version:             1.1.1.0
+Version:             2.2.0.1
 License:             BSD3
 License-file:        LICENSE
 Author:              The DPH Team
@@ -8,24 +8,19 @@ Build-Type:          Simple
 Cabal-Version:       >=1.6
 Stability:           experimental
 Category:            Data Structures
-Homepage:            http://trac.haskell.org/repa
-Bug-reports:         http://trac.haskell.org/repa/newticket
+Homepage:            http://repa.ouroborus.net
+Bug-reports:         repa@ouroborus.net
 Description:
-        NOTE: You must use the GHC head branch > 6.13.20100309 to get decent performance.
         Reusable algorithms using the Repa array library.
 
 Synopsis:
         Algorithms using the Repa array library.
 
-Tested-with: GHC == 6.13.20100309, GHC == 6.12.1
-
 Library
   Build-Depends: 
         base                 == 4.*,
-        dph-base             == 0.5.*,
-        dph-prim-par         == 0.5.*,
-        vector               == 0.7.*,
-        repa                 == 1.1.*
+        vector               == 0.9.*,
+        repa                 == 2.2.*
 
   ghc-options:
         -Wall -fno-warn-missing-signatures
@@ -38,9 +33,11 @@ Library
 
   Exposed-modules:
         Data.Array.Repa.Algorithms.Complex
+        Data.Array.Repa.Algorithms.Randomish
         Data.Array.Repa.Algorithms.DFT
         Data.Array.Repa.Algorithms.DFT.Roots
         Data.Array.Repa.Algorithms.DFT.Center
         Data.Array.Repa.Algorithms.FFT
         Data.Array.Repa.Algorithms.Matrix
         Data.Array.Repa.Algorithms.Convolve
+        Data.Array.Repa.Algorithms.Iterate
