--- a/fibon/Repa/_RepaLib/repa-bytestring/repa-bytestring.cabal
+++ b/fibon/Repa/_RepaLib/repa-bytestring/repa-bytestring.cabal
@@ -1,5 +1,5 @@
 Name:                repa-bytestring
-Version:             1.1.1.0
+Version:             2.2.0.1
 License:             BSD3
 License-file:        LICENSE
 Author:              The DPH Team
@@ -8,23 +8,20 @@ Build-Type:          Simple
 Cabal-Version:       >=1.6
 Stability:           experimental
 Category:            Data Structures
-Homepage:            http://trac.haskell.org/repa
-Bug-reports:         http://trac.haskell.org/repa/newticket
+Homepage:            http://repa.ouroborus.net
+Bug-reports:         repa@ouroborus.net
 Description:
-        NOTE: You must use the GHC head branch > 6.13.20100309 to get decent performance.
         Conversions between Repa Arrays and ByteStrings.
 
 Synopsis:
         Conversions between Repa Arrays and ByteStrings.
 
-Tested-with: GHC == 6.13.20100309, GHC == 6.12.1
-
 Library
   Build-Depends: 
         base                 == 4.*,
-        dph-prim-par         == 0.5.*,
-        repa                 == 1.1.*,
-        bytestring           == 0.9.1.*
+        repa                 == 2.2.*,
+        vector               == 0.9.*,
+        bytestring           == 0.9.*
 
   ghc-options:
         -Odph -Wall -fno-warn-missing-signatures
