--- a/fibon/Repa/_RepaLib/repa-io/repa-io.cabal
+++ b/fibon/Repa/_RepaLib/repa-io/repa-io.cabal
@@ -1,5 +1,5 @@
 Name:                repa-io
-Version:             1.1.1.0
+Version:             2.2.0.1
 License:             BSD3
 License-file:        LICENSE
 Author:              The DPH Team
@@ -8,25 +8,23 @@ Build-Type:          Simple
 Cabal-Version:       >=1.6
 Stability:           experimental
 Category:            Data Structures
-Homepage:            http://trac.haskell.org/repa
-Bug-reports:         http://trac.haskell.org/repa/newticket
+Homepage:            http://repa.ouroborus.net
+Bug-reports:         repa@ouroborus.net
 Description:
-        NOTE: You must use the GHC head branch > 6.13.20100309 to get decent performance.
         Read and write Repa arrays in various formats.
 
 Synopsis:
         Read and write Repa arrays in various formats.
 
-Tested-with: GHC == 6.13.20100309, GHC == 6.12.1
-
 Library
   Build-Depends: 
         base                 == 4.*,
-        dph-prim-par         == 0.5.*,
-        repa                 == 1.1.*,
-        repa-bytestring      == 1.1.*,
+        repa                 == 2.2.*,
+        repa-bytestring      == 2.2.*,
         bmp                  == 1.1.*,
-        old-time             == 1.0.*
+        old-time             == 1.0.*,
+        vector               == 0.9.*,
+        binary               == 0.5.*
 
   ghc-options:
         -Odph -Wall -fno-warn-missing-signatures
@@ -36,6 +34,7 @@ Library
         Data.Array.Repa.IO.BMP
         Data.Array.Repa.IO.Vector
         Data.Array.Repa.IO.Matrix
+        Data.Array.Repa.IO.Binary
         Data.Array.Repa.IO.Timing
       
   Other-modules:
