Add repa benchmarks to gitignore

--- a/fibon/.gitignore
+++ b/fibon/.gitignore
@@ -115,3 +115,14 @@ TAGS/
 dist/
 repa-bot/
 repa-examples/
+
+Repa/Blur/Blur
+Repa/Blur/out.bmp
+Shootout/BinaryTrees/BinaryTrees
+Shootout/ChameneosRedux/ChameneosRedux
+Shootout/Fannkuch/Fannkuch
+Shootout/Mandelbrot/Mandelbrot
+Shootout/Nbody/Nbody
+Shootout/Pidigits/Pidigits
+Shootout/SpectralNorm/SpectralNorm
+
