--- a/fibon/Repa/Makefile
+++ b/fibon/Repa/Makefile
@@ -1,11 +1,9 @@
 TOP = ../..
 include $(TOP)/mk/boilerplate.mk
 
-SSUBDIRS = \
-  Blur     FFT2d    FFT3d    Laplace  MMult
+SSUBDIRS = Blur Canny FFTHighPass2d FFT3d Laplace MMult Sobel Volume
 
 SUBDIRS = $(filter-out $(NOT_THESE), $(SSUBDIRS))
 
 include $(TOP)/mk/target.mk
-
 
