--- a/fibon/Hackage/Simgi/Makefile
+++ b/fibon/Hackage/Simgi/Makefile
@@ -30,7 +30,7 @@ SRCS = parsec-2/Text/ParserCombinators/Parsec/Pos.hs \
        mersenne-random-pure64/cbits/mt19937-64-unsafe.c \
        mersenne-random-pure64/cbits/mt19937-64.c
 PROG_ARGS += oregonator.sgl
-HC_OPTS += -isrc -igenerated -iparsec-2 -imersenne-random-pure64 -package base -package containers -package haskell98 -package mtl -package old-time -package random -XExistentialQuantification -XPolymorphicComponents
+HC_OPTS += -isrc -igenerated -iparsec-2 -imersenne-random-pure64 -package base -package containers -package mtl -package old-time -package random -XExistentialQuantification -XPolymorphicComponents
 CC_OPTS += $(CONF_CC_OPTS_STAGE2) -Imersenne-random-pure64/include
 CLEAN_FILES += oregonator_output.dat mersenne-random-pure64/System/Random/Mersenne/Pure64/Base.hs mersenne-random-pure64/System/Random/Mersenne/Pure64/Base_hsc.c
 include $(TOP)/mk/target.mk
