--- a/fibon/Hackage/QuickCheck/Makefile
+++ b/fibon/Hackage/QuickCheck/Makefile
@@ -16,5 +16,5 @@ SRCS = Test/QuickCheck/Exception.hs \
        examples/ExHeap.hs \
        examples/Main.hs
 PROG_ARGS += 100000
-HC_OPTS += -iexamples -i. -package base -package containers -package extensible-exceptions -package ghc -package mtl -package random
+HC_OPTS += -iexamples -i. -package base -package containers -package ghc -package mtl -package random
 include $(TOP)/mk/target.mk
