--- a/fibon/.gitignore
+++ b/fibon/.gitignore
@@ -1,5 +1,71 @@
 cachegrind.out.*
 cachegrind.out.summary
+
+Hackage/Agum/Agum
+Hackage/Bzlib/Bzlib
+Hackage/Bzlib/Codec/Compression/BZip/Stream.hs
+Hackage/Bzlib/Codec/Compression/BZip/Stream_hsc.c
+Hackage/Bzlib/mito.aa.bz2.roundtrip
+Hackage/Cpsa/Cpsa
+Hackage/Crypto/Crypto
+Hackage/Fgl/Fgl
+Hackage/Fst/Fst
+Hackage/Funsat/Funsat
+Hackage/Gf/BeschFre.gfo
+Hackage/Gf/Cat.gfo
+Hackage/Gf/CatEng.gfo
+Hackage/Gf/CatFre.gfo
+Hackage/Gf/CatRomance.gfo
+Hackage/Gf/Common.gfo
+Hackage/Gf/CommonRomance.gfo
+Hackage/Gf/CommonX.gfo
+Hackage/Gf/DiffFre.gfo
+Hackage/Gf/DiffRomance.gfo
+Hackage/Gf/Eng.gfo
+Hackage/Gf/EngDescr.gfo
+Hackage/Gf/EngReal.gfo
+Hackage/Gf/Fre.gfo
+Hackage/Gf/Fre.hs
+Hackage/Gf/Fre.pgf
+Hackage/Gf/FreDescr.gfo
+Hackage/Gf/FreReal.gfo
+Hackage/Gf/Gf
+Hackage/Gf/IrregEng.gfo
+Hackage/Gf/IrregEngAbs.gfo
+Hackage/Gf/IrregFre.gfo
+Hackage/Gf/IrregFreAbs.gfo
+Hackage/Gf/MorphoEng.gfo
+Hackage/Gf/MorphoFre.gfo
+Hackage/Gf/ParadigmsEng.gfo
+Hackage/Gf/ParamX.gfo
+Hackage/Gf/PhonoFre.gfo
+Hackage/Gf/Predef.gfo
+Hackage/Gf/Prelude.gfo
+Hackage/Gf/ResEng.gfo
+Hackage/Gf/ResFre.gfo
+Hackage/Gf/ResRomance.gfo
+Hackage/Gf/src/compiler/GF/Grammar/Lexer.hs
+Hackage/Gf/src/compiler/GF/Grammar/Parser.hs
+Hackage/Gf/src/runtime/haskell/PGF/Expr.hi-boot
+Hackage/Gf/src/runtime/haskell/PGF/Expr.o-boot
+Hackage/HaLeX/HaLeX
+Hackage/Happy/Bio.hs
+Hackage/Happy/ErlParser.hs
+Hackage/Happy/Happy
+Hackage/Happy/HaskellParser.hs
+Hackage/Happy/TestInput.hs
+Hackage/Hgalib/Hgalib
+Hackage/Palindromes/Palindromes
+Hackage/Pappy/Pappy
+Hackage/Regex/Regex
+Hackage/Simgi/Simgi
+Hackage/Simgi/mersenne-random-pure64/System/Random/Mersenne/Pure64/Base.hs
+Hackage/Simgi/mersenne-random-pure64/System/Random/Mersenne/Pure64/Base_hsc.c
+Hackage/Simgi/oregonator_output.dat
+Hackage/TernaryTrees/TernaryTrees
+Hackage/TernaryTrees/olivertwist.txt.bin
+Hackage/Xsact/Xsact
+
 Shootout/BinaryTrees/BinaryTrees
 Shootout/ChameneosRedux/ChameneosRedux
 Shootout/Fannkuch/Fannkuch
@@ -7,8 +73,4 @@ Shootout/Mandelbrot/Mandelbrot
 Shootout/Nbody/Nbody
 Shootout/Pidigits/Pidigits
 Shootout/SpectralNorm/SpectralNorm
-Hackage/Bzlib/Codec/Compression/BZip/Stream.hs
-Hackage/Bzlib/Codec/Compression/BZip/Stream_hsc.c
-Hackage/Gf/src/compiler/GF/Grammar/Lexer.hs
-Hackage/Gf/src/compiler/GF/Grammar/Parser.hs
 
