--- a/fibon/Repa/Sobel/Makefile
+++ b/fibon/Repa/Sobel/Makefile
@@ -71,7 +71,7 @@ SRCS = ../_RepaLib/bmp/Codec/BMP/Base.hs \
        Solver.hs \
        Main.hs
 PROG_ARGS += 180 lena.bmp out.bmp
-HC_OPTS += -threaded -i. -i../_RepaLib/repa -i../_RepaLib/repa-algorithms -i../_RepaLib/repa-io -i../_RepaLib/bmp -i../_RepaLib/repa-bytestring -i../_RepaLib/quickcheck -package base -package binary -package bytestring -package dph-base -package dph-prim-par -package dph-prim-seq -package extensible-exceptions -package ghc -package mtl -package old-time -package random -package vector
+HC_OPTS += -threaded -i. -i../_RepaLib/repa -i../_RepaLib/repa-algorithms -i../_RepaLib/repa-io -i../_RepaLib/bmp -i../_RepaLib/repa-bytestring -i../_RepaLib/quickcheck -package base -package binary -package bytestring -package dph-base -package dph-prim-par -package dph-prim-seq -package ghc -package mtl -package old-time -package random -package vector
 CLEAN_FILES += out.bmp
 include $(TOP)/mk/target.mk
 
