--- a/fibon/.gitignore
+++ b/fibon/.gitignore
@@ -74,3 +74,147 @@ Shootout/Nbody/Nbody
 Shootout/Pidigits/Pidigits
 Shootout/SpectralNorm/SpectralNorm
 
+Repa/Blur/Blur
+Repa/Blur/out.bmp
+Repa/Canny/Canny
+Repa/Canny/out.bmp
+Repa/FFT3d/FFT3d
+Repa/FFT3d/output000.bmp
+Repa/FFT3d/output001.bmp
+Repa/FFT3d/output002.bmp
+Repa/FFT3d/output003.bmp
+Repa/FFT3d/output004.bmp
+Repa/FFT3d/output005.bmp
+Repa/FFT3d/output006.bmp
+Repa/FFT3d/output007.bmp
+Repa/FFT3d/output008.bmp
+Repa/FFT3d/output009.bmp
+Repa/FFT3d/output010.bmp
+Repa/FFT3d/output011.bmp
+Repa/FFT3d/output012.bmp
+Repa/FFT3d/output013.bmp
+Repa/FFT3d/output014.bmp
+Repa/FFT3d/output015.bmp
+Repa/FFT3d/output016.bmp
+Repa/FFT3d/output017.bmp
+Repa/FFT3d/output018.bmp
+Repa/FFT3d/output019.bmp
+Repa/FFT3d/output020.bmp
+Repa/FFT3d/output021.bmp
+Repa/FFT3d/output022.bmp
+Repa/FFT3d/output023.bmp
+Repa/FFT3d/output024.bmp
+Repa/FFT3d/output025.bmp
+Repa/FFT3d/output026.bmp
+Repa/FFT3d/output027.bmp
+Repa/FFT3d/output028.bmp
+Repa/FFT3d/output029.bmp
+Repa/FFT3d/output030.bmp
+Repa/FFT3d/output031.bmp
+Repa/FFT3d/output032.bmp
+Repa/FFT3d/output033.bmp
+Repa/FFT3d/output034.bmp
+Repa/FFT3d/output035.bmp
+Repa/FFT3d/output036.bmp
+Repa/FFT3d/output037.bmp
+Repa/FFT3d/output038.bmp
+Repa/FFT3d/output039.bmp
+Repa/FFT3d/output040.bmp
+Repa/FFT3d/output041.bmp
+Repa/FFT3d/output042.bmp
+Repa/FFT3d/output043.bmp
+Repa/FFT3d/output044.bmp
+Repa/FFT3d/output045.bmp
+Repa/FFT3d/output046.bmp
+Repa/FFT3d/output047.bmp
+Repa/FFT3d/output048.bmp
+Repa/FFT3d/output049.bmp
+Repa/FFT3d/output050.bmp
+Repa/FFT3d/output051.bmp
+Repa/FFT3d/output052.bmp
+Repa/FFT3d/output053.bmp
+Repa/FFT3d/output054.bmp
+Repa/FFT3d/output055.bmp
+Repa/FFT3d/output056.bmp
+Repa/FFT3d/output057.bmp
+Repa/FFT3d/output058.bmp
+Repa/FFT3d/output059.bmp
+Repa/FFT3d/output060.bmp
+Repa/FFT3d/output061.bmp
+Repa/FFT3d/output062.bmp
+Repa/FFT3d/output063.bmp
+Repa/FFT3d/output064.bmp
+Repa/FFT3d/output065.bmp
+Repa/FFT3d/output066.bmp
+Repa/FFT3d/output067.bmp
+Repa/FFT3d/output068.bmp
+Repa/FFT3d/output069.bmp
+Repa/FFT3d/output070.bmp
+Repa/FFT3d/output071.bmp
+Repa/FFT3d/output072.bmp
+Repa/FFT3d/output073.bmp
+Repa/FFT3d/output074.bmp
+Repa/FFT3d/output075.bmp
+Repa/FFT3d/output076.bmp
+Repa/FFT3d/output077.bmp
+Repa/FFT3d/output078.bmp
+Repa/FFT3d/output079.bmp
+Repa/FFT3d/output080.bmp
+Repa/FFT3d/output081.bmp
+Repa/FFT3d/output082.bmp
+Repa/FFT3d/output083.bmp
+Repa/FFT3d/output084.bmp
+Repa/FFT3d/output085.bmp
+Repa/FFT3d/output086.bmp
+Repa/FFT3d/output087.bmp
+Repa/FFT3d/output088.bmp
+Repa/FFT3d/output089.bmp
+Repa/FFT3d/output090.bmp
+Repa/FFT3d/output091.bmp
+Repa/FFT3d/output092.bmp
+Repa/FFT3d/output093.bmp
+Repa/FFT3d/output094.bmp
+Repa/FFT3d/output095.bmp
+Repa/FFT3d/output096.bmp
+Repa/FFT3d/output097.bmp
+Repa/FFT3d/output098.bmp
+Repa/FFT3d/output099.bmp
+Repa/FFT3d/output100.bmp
+Repa/FFT3d/output101.bmp
+Repa/FFT3d/output102.bmp
+Repa/FFT3d/output103.bmp
+Repa/FFT3d/output104.bmp
+Repa/FFT3d/output105.bmp
+Repa/FFT3d/output106.bmp
+Repa/FFT3d/output107.bmp
+Repa/FFT3d/output108.bmp
+Repa/FFT3d/output109.bmp
+Repa/FFT3d/output110.bmp
+Repa/FFT3d/output111.bmp
+Repa/FFT3d/output112.bmp
+Repa/FFT3d/output113.bmp
+Repa/FFT3d/output114.bmp
+Repa/FFT3d/output115.bmp
+Repa/FFT3d/output116.bmp
+Repa/FFT3d/output117.bmp
+Repa/FFT3d/output118.bmp
+Repa/FFT3d/output119.bmp
+Repa/FFT3d/output120.bmp
+Repa/FFT3d/output121.bmp
+Repa/FFT3d/output122.bmp
+Repa/FFT3d/output123.bmp
+Repa/FFT3d/output124.bmp
+Repa/FFT3d/output125.bmp
+Repa/FFT3d/output126.bmp
+Repa/FFT3d/output127.bmp
+Repa/FFTHighPass2d/FFTHighPass2d
+Repa/FFTHighPass2d/out.bmp
+Repa/Laplace/Laplace
+Repa/Laplace/laplace.bmp
+Repa/MMult/MMult
+Repa/Sobel/Sobel
+Repa/Sobel/out.bmp
+Repa/Volume/Volume
+Repa/Volume/out.bmp
+Repa/Volume/out.w16
+
