Update and clean makefiles

--- a/parallel/minimax/Makefile
+++ b/parallel/minimax/Makefile
@@ -1,7 +1,13 @@
 TOP = ../..
 include $(TOP)/mk/boilerplate.mk
 
-SRC_HC_OPTS += -package parallel -package random
+SRCS = Board.hs \
+       Game.hs \
+		 Prog.hs \
+		 Tree.hs \
+		 Wins.hs \
+		 Main.hs
+HC_OPTS += -package parallel -package random
 
 PROG_ARGS = 4 6
 
