--- a/imaginary/Makefile
+++ b/imaginary/Makefile
@@ -1,7 +1,10 @@
 TOP = ..
 include $(TOP)/mk/boilerplate.mk
+
 SUBDIRS = exp3_8 gen_regexps paraffins primes queens rfib tak x2n1 \
 	wheel-sieve1 wheel-sieve2 integrate bernouilli
+
+OTHER_SUBDIRS = digits-of-e1 digits-of-e2
 
 include $(TOP)/mk/target.mk
 
