--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ imaginary/tak/tak
 imaginary/wheel-sieve1/wheel-sieve1
 imaginary/wheel-sieve2/wheel-sieve2
 imaginary/x2n1/x2n1
-nofib-analyse/nofib-analyse
+
 real/anna/anna
 real/bspt/bspt
 real/cacheprof/cacheprof
@@ -47,7 +47,7 @@ real/rsa/rsa
 real/scs/scs
 real/symalg/symalg
 real/veritas/veritas
-runstdtest/runstdtest
+
 spectral/ansi/ansi
 spectral/atom/atom
 spectral/awards/awards
@@ -102,15 +102,30 @@ spectral/simple/simple
 spectral/sorting/sorting
 spectral/sphere/sphere
 spectral/treejoin/treejoin
+
 gc/circsim/circsim
 gc/constraints/constraints
 gc/fibheaps/fibheaps
 gc/fulsom/fulsom
 gc/gc_bench/gc_bench
 gc/happy/happy
+gc/hash/hash
 gc/lcss/lcss
 gc/mutstore1/mutstore1
 gc/mutstore2/mutstore2
 gc/power/power
 gc/spellcheck/spellcheck
+
+parallel/blackscholes/blackscholes
+parallel/coins/coins
+parallel/gray/gray
+parallel/mandel/mandel
+parallel/matmult/matmult
+parallel/minimax/minimax
+parallel/parfib/parfib
+parallel/partree/partree
+parallel/prsa/prsa
+parallel/queens/queens
+parallel/ray/ray
+parallel/sumeuler/sumeuler
 
