--- a/parallel/transclos/Makefile
+++ b/parallel/transclos/Makefile
@@ -1,7 +1,7 @@
 TOP = ../..
 include $(TOP)/mk/boilerplate.mk
 
-SRC_HC_OPTS += -cpp -DSTRATEGIES -DTRANSCL_NESTED -package random -package parallel
+SRC_HC_OPTS += -cpp -DSTRATEGIES -DTRANSCL_NESTED -package random -package parallel -package containers
 
 # XXX: only speeds up without optimisation.  This is bad.  Could be
 # due to the nfib delay mucking up load-balancing.
