--- a/imaginary/Makefile
+++ b/imaginary/Makefile
@@ -1,8 +1,8 @@
 TOP = ..
 include $(TOP)/mk/boilerplate.mk
 
-SUBDIRS = exp3_8 gen_regexps paraffins primes queens rfib tak x2n1 \
-	wheel-sieve1 wheel-sieve2 integrate bernouilli
+SUBDIRS = bernouilli exp3_8 gen_regexps integrate paraffins primes queens \
+          rfib tak wheel-sieve1 wheel-sieve2 x2n1
 
 OTHER_SUBDIRS = digits-of-e1 digits-of-e2
 
