--- a/spectral/Makefile
+++ b/spectral/Makefile
@@ -1,11 +1,11 @@
 TOP = ..
 include $(TOP)/mk/boilerplate.mk
 
-SUBDIRS = \
-  ansi atom awards banner boyer boyer2 calendar cichelli circsim clausify \
-  constraints cryptarithm1 cryptarithm2 cse eliza expert fibheaps fish \
-  fft2 gcd hartel integer lcss life knights mandel mandel2 minimax multiplier \
-  para power pretty primetest puzzle rewrite scc simple sorting sphere treejoin
+SUBDIRS = ansi atom awards banner boyer boyer2 calendar cichelli circsim \
+          clausify constraints cryptarithm1 cryptarithm2 cse eliza expert \
+          fft2 fibheaps fish gcd hartel integer knights lcss life mandel \
+          mandel2 minimax multiplier para power pretty primetest puzzle \
+          rewrite scc simple sorting sphere treejoin
 
 # compreals	no suitable test data
 # salishan	no Haskell code!
