--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,13 @@
 *.hi
 .depend
 .depend.bak
+cachegrind.out.*
+cachegrind.out.summary
 
+# Specific generated files
 nofib-analyse/nofib-analyse
 runstdtest/runstdtest
 
-# Specific generated files
 imaginary/bernouilli/bernouilli
 imaginary/exp3_8/exp3_8
 imaginary/gen_regexps/gen_regexps
@@ -130,4 +132,233 @@ parallel/queens/queens
 parallel/ray/ray
 parallel/sumeuler/sumeuler
 parallel/transclos/transclos
+
+smp/callback001/Main_stub.h
+smp/callback001/callback001
+smp/callback002/Main_stub.h
+smp/callback002/callback002
+smp/chan/chan
+smp/sieve/sieve
+smp/threads001/threads001
+smp/threads003/threads003
+smp/threads006/threads006
+smp/threads007/threads007
+
+fibon/Hackage/Agum/Agum
+fibon/Hackage/Bzlib/Bzlib
+fibon/Hackage/Bzlib/Codec/Compression/BZip/Stream.hs
+fibon/Hackage/Bzlib/Codec/Compression/BZip/Stream_hsc.c
+fibon/Hackage/Bzlib/mito.aa.bz2.roundtrip
+fibon/Hackage/Cpsa/Cpsa
+fibon/Hackage/Crypto/Crypto
+fibon/Hackage/Fgl/Fgl
+fibon/Hackage/Fst/Fst
+fibon/Hackage/Funsat/Funsat
+fibon/Hackage/Gf/BeschFre.gfo
+fibon/Hackage/Gf/Cat.gfo
+fibon/Hackage/Gf/CatEng.gfo
+fibon/Hackage/Gf/CatFre.gfo
+fibon/Hackage/Gf/CatRomance.gfo
+fibon/Hackage/Gf/Common.gfo
+fibon/Hackage/Gf/CommonRomance.gfo
+fibon/Hackage/Gf/CommonX.gfo
+fibon/Hackage/Gf/DiffFre.gfo
+fibon/Hackage/Gf/DiffRomance.gfo
+fibon/Hackage/Gf/Eng.gfo
+fibon/Hackage/Gf/EngDescr.gfo
+fibon/Hackage/Gf/EngReal.gfo
+fibon/Hackage/Gf/Fre.gfo
+fibon/Hackage/Gf/Fre.hs
+fibon/Hackage/Gf/Fre.pgf
+fibon/Hackage/Gf/FreDescr.gfo
+fibon/Hackage/Gf/FreReal.gfo
+fibon/Hackage/Gf/Gf
+fibon/Hackage/Gf/IrregEng.gfo
+fibon/Hackage/Gf/IrregEngAbs.gfo
+fibon/Hackage/Gf/IrregFre.gfo
+fibon/Hackage/Gf/IrregFreAbs.gfo
+fibon/Hackage/Gf/MorphoEng.gfo
+fibon/Hackage/Gf/MorphoFre.gfo
+fibon/Hackage/Gf/ParadigmsEng.gfo
+fibon/Hackage/Gf/ParamX.gfo
+fibon/Hackage/Gf/PhonoFre.gfo
+fibon/Hackage/Gf/Predef.gfo
+fibon/Hackage/Gf/Prelude.gfo
+fibon/Hackage/Gf/ResEng.gfo
+fibon/Hackage/Gf/ResFre.gfo
+fibon/Hackage/Gf/ResRomance.gfo
+fibon/Hackage/Gf/src/compiler/GF/Grammar/Lexer.hs
+fibon/Hackage/Gf/src/compiler/GF/Grammar/Parser.hs
+fibon/Hackage/Gf/src/runtime/haskell/PGF/Expr.hi-boot
+fibon/Hackage/Gf/src/runtime/haskell/PGF/Expr.o-boot
+fibon/Hackage/HaLeX/HaLeX
+fibon/Hackage/Happy/Bio.hs
+fibon/Hackage/Happy/ErlParser.hs
+fibon/Hackage/Happy/Happy
+fibon/Hackage/Happy/HaskellParser.hs
+fibon/Hackage/Happy/TestInput.hs
+fibon/Hackage/Hgalib/Hgalib
+fibon/Hackage/Palindromes/Palindromes
+fibon/Hackage/Pappy/Pappy
+fibon/Hackage/QuickCheck/QuickCheck
+fibon/Hackage/Regex/Regex
+fibon/Hackage/Simgi/Simgi
+fibon/Hackage/Simgi/mersenne-random-pure64/System/Random/Mersenne/Pure64/Base.hs
+fibon/Hackage/Simgi/mersenne-random-pure64/System/Random/Mersenne/Pure64/Base_hsc.c
+fibon/Hackage/Simgi/oregonator_output.dat
+fibon/Hackage/TernaryTrees/TernaryTrees
+fibon/Hackage/TernaryTrees/olivertwist.txt.bin
+fibon/Hackage/Xsact/Xsact
+
+fibon/Shootout/BinaryTrees/BinaryTrees
+fibon/Shootout/ChameneosRedux/ChameneosRedux
+fibon/Shootout/Fannkuch/Fannkuch
+fibon/Shootout/Mandelbrot/Mandelbrot
+fibon/Shootout/Nbody/Nbody
+fibon/Shootout/Pidigits/Pidigits
+fibon/Shootout/SpectralNorm/SpectralNorm
+
+fibon/Repa/Blur/Blur
+fibon/Repa/Blur/out.bmp
+fibon/Repa/Canny/Canny
+fibon/Repa/Canny/out.bmp
+fibon/Repa/FFT3d/FFT3d
+fibon/Repa/FFT3d/output000.bmp
+fibon/Repa/FFT3d/output001.bmp
+fibon/Repa/FFT3d/output002.bmp
+fibon/Repa/FFT3d/output003.bmp
+fibon/Repa/FFT3d/output004.bmp
+fibon/Repa/FFT3d/output005.bmp
+fibon/Repa/FFT3d/output006.bmp
+fibon/Repa/FFT3d/output007.bmp
+fibon/Repa/FFT3d/output008.bmp
+fibon/Repa/FFT3d/output009.bmp
+fibon/Repa/FFT3d/output010.bmp
+fibon/Repa/FFT3d/output011.bmp
+fibon/Repa/FFT3d/output012.bmp
+fibon/Repa/FFT3d/output013.bmp
+fibon/Repa/FFT3d/output014.bmp
+fibon/Repa/FFT3d/output015.bmp
+fibon/Repa/FFT3d/output016.bmp
+fibon/Repa/FFT3d/output017.bmp
+fibon/Repa/FFT3d/output018.bmp
+fibon/Repa/FFT3d/output019.bmp
+fibon/Repa/FFT3d/output020.bmp
+fibon/Repa/FFT3d/output021.bmp
+fibon/Repa/FFT3d/output022.bmp
+fibon/Repa/FFT3d/output023.bmp
+fibon/Repa/FFT3d/output024.bmp
+fibon/Repa/FFT3d/output025.bmp
+fibon/Repa/FFT3d/output026.bmp
+fibon/Repa/FFT3d/output027.bmp
+fibon/Repa/FFT3d/output028.bmp
+fibon/Repa/FFT3d/output029.bmp
+fibon/Repa/FFT3d/output030.bmp
+fibon/Repa/FFT3d/output031.bmp
+fibon/Repa/FFT3d/output032.bmp
+fibon/Repa/FFT3d/output033.bmp
+fibon/Repa/FFT3d/output034.bmp
+fibon/Repa/FFT3d/output035.bmp
+fibon/Repa/FFT3d/output036.bmp
+fibon/Repa/FFT3d/output037.bmp
+fibon/Repa/FFT3d/output038.bmp
+fibon/Repa/FFT3d/output039.bmp
+fibon/Repa/FFT3d/output040.bmp
+fibon/Repa/FFT3d/output041.bmp
+fibon/Repa/FFT3d/output042.bmp
+fibon/Repa/FFT3d/output043.bmp
+fibon/Repa/FFT3d/output044.bmp
+fibon/Repa/FFT3d/output045.bmp
+fibon/Repa/FFT3d/output046.bmp
+fibon/Repa/FFT3d/output047.bmp
+fibon/Repa/FFT3d/output048.bmp
+fibon/Repa/FFT3d/output049.bmp
+fibon/Repa/FFT3d/output050.bmp
+fibon/Repa/FFT3d/output051.bmp
+fibon/Repa/FFT3d/output052.bmp
+fibon/Repa/FFT3d/output053.bmp
+fibon/Repa/FFT3d/output054.bmp
+fibon/Repa/FFT3d/output055.bmp
+fibon/Repa/FFT3d/output056.bmp
+fibon/Repa/FFT3d/output057.bmp
+fibon/Repa/FFT3d/output058.bmp
+fibon/Repa/FFT3d/output059.bmp
+fibon/Repa/FFT3d/output060.bmp
+fibon/Repa/FFT3d/output061.bmp
+fibon/Repa/FFT3d/output062.bmp
+fibon/Repa/FFT3d/output063.bmp
+fibon/Repa/FFT3d/output064.bmp
+fibon/Repa/FFT3d/output065.bmp
+fibon/Repa/FFT3d/output066.bmp
+fibon/Repa/FFT3d/output067.bmp
+fibon/Repa/FFT3d/output068.bmp
+fibon/Repa/FFT3d/output069.bmp
+fibon/Repa/FFT3d/output070.bmp
+fibon/Repa/FFT3d/output071.bmp
+fibon/Repa/FFT3d/output072.bmp
+fibon/Repa/FFT3d/output073.bmp
+fibon/Repa/FFT3d/output074.bmp
+fibon/Repa/FFT3d/output075.bmp
+fibon/Repa/FFT3d/output076.bmp
+fibon/Repa/FFT3d/output077.bmp
+fibon/Repa/FFT3d/output078.bmp
+fibon/Repa/FFT3d/output079.bmp
+fibon/Repa/FFT3d/output080.bmp
+fibon/Repa/FFT3d/output081.bmp
+fibon/Repa/FFT3d/output082.bmp
+fibon/Repa/FFT3d/output083.bmp
+fibon/Repa/FFT3d/output084.bmp
+fibon/Repa/FFT3d/output085.bmp
+fibon/Repa/FFT3d/output086.bmp
+fibon/Repa/FFT3d/output087.bmp
+fibon/Repa/FFT3d/output088.bmp
+fibon/Repa/FFT3d/output089.bmp
+fibon/Repa/FFT3d/output090.bmp
+fibon/Repa/FFT3d/output091.bmp
+fibon/Repa/FFT3d/output092.bmp
+fibon/Repa/FFT3d/output093.bmp
+fibon/Repa/FFT3d/output094.bmp
+fibon/Repa/FFT3d/output095.bmp
+fibon/Repa/FFT3d/output096.bmp
+fibon/Repa/FFT3d/output097.bmp
+fibon/Repa/FFT3d/output098.bmp
+fibon/Repa/FFT3d/output099.bmp
+fibon/Repa/FFT3d/output100.bmp
+fibon/Repa/FFT3d/output101.bmp
+fibon/Repa/FFT3d/output102.bmp
+fibon/Repa/FFT3d/output103.bmp
+fibon/Repa/FFT3d/output104.bmp
+fibon/Repa/FFT3d/output105.bmp
+fibon/Repa/FFT3d/output106.bmp
+fibon/Repa/FFT3d/output107.bmp
+fibon/Repa/FFT3d/output108.bmp
+fibon/Repa/FFT3d/output109.bmp
+fibon/Repa/FFT3d/output110.bmp
+fibon/Repa/FFT3d/output111.bmp
+fibon/Repa/FFT3d/output112.bmp
+fibon/Repa/FFT3d/output113.bmp
+fibon/Repa/FFT3d/output114.bmp
+fibon/Repa/FFT3d/output115.bmp
+fibon/Repa/FFT3d/output116.bmp
+fibon/Repa/FFT3d/output117.bmp
+fibon/Repa/FFT3d/output118.bmp
+fibon/Repa/FFT3d/output119.bmp
+fibon/Repa/FFT3d/output120.bmp
+fibon/Repa/FFT3d/output121.bmp
+fibon/Repa/FFT3d/output122.bmp
+fibon/Repa/FFT3d/output123.bmp
+fibon/Repa/FFT3d/output124.bmp
+fibon/Repa/FFT3d/output125.bmp
+fibon/Repa/FFT3d/output126.bmp
+fibon/Repa/FFT3d/output127.bmp
+fibon/Repa/FFTHighPass2d/FFTHighPass2d
+fibon/Repa/FFTHighPass2d/out.bmp
+fibon/Repa/Laplace/Laplace
+fibon/Repa/Laplace/laplace.bmp
+fibon/Repa/MMult/MMult
+fibon/Repa/Sobel/Sobel
+fibon/Repa/Sobel/out.bmp
+fibon/Repa/Volume/Volume
+fibon/Repa/Volume/out.bmp
+fibon/Repa/Volume/out.w16
 
