Make subset of supercompile-folder benchmarks compile and run correctly, fix SC opts for other benchmarks

--- a/supercompile/Makefile
+++ b/supercompile/Makefile
@@ -1,5 +1,7 @@
 TOP = ..
 include $(TOP)/mk/boilerplate.mk
-SUBDIRS = compile-time contracts ilya jason neil peter toys trivial
+#SUBDIRS = compile-time contracts ilya jason neil peter toys
+# The ilya tests are for program equivalence
+SUBDIRS = neil peter toys
 
 include $(TOP)/mk/target.mk
