--- a/supercompile/peter/Factorial/Makefile
+++ b/supercompile/peter/Factorial/Makefile
@@ -5,6 +5,8 @@ include $(TOP)/mk/target.mk
 
 SRCS = Main.hs
 
+SRC_RUNTEST_OPTS += +RTS -K32M -RTS
+
 FAST_OPTS = 1000000
 NORM_OPTS = 1000000
 SLOW_OPTS = 1000000
