--- a/imaginary/paraffins/Makefile
+++ b/imaginary/paraffins/Makefile
@@ -12,3 +12,6 @@ include $(TOP)/mk/target.mk
 FAST_OPTS = 17
 NORM_OPTS = 17
 SLOW_OPTS = 19
+
+# Seems to loop like this:
+#SRC_SUPERCOMP_HC_OPTS =
