Considerable benchmark tweaking

--- a/imaginary/wheel-sieve1/Makefile
+++ b/imaginary/wheel-sieve1/Makefile
@@ -7,4 +7,5 @@ FAST_OPTS = 20000
 NORM_OPTS = 100000
 SLOW_OPTS = 230000
 
-SRC_SUPERCOMP_HC_OPTS =
+# Seems to loop with this:
+#SRC_SUPERCOMP_HC_OPTS =
