--- a/supercompile/peter/Factorial/Makefile
+++ b/supercompile/peter/Factorial/Makefile
@@ -7,6 +7,8 @@ SRCS = Main.hs
 
 SRC_RUNTEST_OPTS += +RTS -K32M -RTS
 
-FAST_OPTS = 1000000
-NORM_OPTS = 1000000
-SLOW_OPTS = 1000000
+FAST_OPTS = 2000000
+NORM_OPTS = 2000000
+SLOW_OPTS = 2000000
+
+SRC_SUPERCOMP_HC_OPTS =
