--- a/supercompile/peter/ZipTreeMaps/Makefile
+++ b/supercompile/peter/ZipTreeMaps/Makefile
@@ -4,3 +4,9 @@ include $(TOP)/mk/boilerplate.mk
 include $(TOP)/mk/target.mk
 
 SRCS = Main.hs
+
+FAST_OPTS = 22
+NORM_OPTS = 22
+SLOW_OPTS = 22
+
+SRC_SUPERCOMP_HC_OPTS =
