--- a/supercompile/toys/Ackermann/Makefile
+++ b/supercompile/toys/Ackermann/Makefile
@@ -4,3 +4,9 @@ include $(TOP)/mk/boilerplate.mk
 include $(TOP)/mk/target.mk
 
 SRCS = Main.hs
+
+FAST_OPTS = 10000
+NORM_OPTS = 10000
+SLOW_OPTS = 10000
+
+SRC_SUPERCOMP_HC_OPTS =
