--- a/supercompile/neil/Makefile
+++ b/supercompile/neil/Makefile
@@ -1,5 +1,8 @@
 TOP = ../..
 include $(TOP)/mk/boilerplate.mk
-SUBDIRS = SumSquare-LazySum SumSquare
+SUBDIRS = SumSquare
+
+# Worthless benchmark, runs too fast:
+# SumSquare-LazySum
 
 include $(TOP)/mk/target.mk
