--- a/supercompile/peter/Makefile
+++ b/supercompile/peter/Makefile
@@ -1,5 +1,5 @@
 TOP = ../..
 include $(TOP)/mk/boilerplate.mk
-SUBDIRS = Append Factorial Raytracer SumTree-NoLiterals SumTree TreeFlip-NoLiterals TreeFlip ZipMaps ZipTreeMaps
+SUBDIRS = Append Factorial Raytracer SumTree TreeFlip ZipMaps ZipTreeMaps
 
 include $(TOP)/mk/target.mk
