Tweaks to benchmarks, more benchmarks

--- a/imaginary/tak/Makefile
+++ b/imaginary/tak/Makefile
@@ -7,4 +7,5 @@ FAST_OPTS = 27 16 8
 NORM_OPTS = 24 16 8
 SLOW_OPTS = 33 17 8
 
-SRC_SUPERCOMP_HC_OPTS =
+# Goes off to infinity with +VE information even if rollback is off
+SRC_SUPERCOMP_HC_OPTS = -fsupercompiler-no-positive-information
