Add new imaginary nofib benchmark kahan
The benchmark implements the Kahan summation algorithm and tests unboxed
arrays and floating point arithmetic in tight loops.

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ imaginary/tak/tak
 imaginary/wheel-sieve1/wheel-sieve1
 imaginary/wheel-sieve2/wheel-sieve2
 imaginary/x2n1/x2n1
+imaginary/kahan/kahan
 
 real/anna/anna
 real/bspt/bspt
