--- a/imaginary/Makefile
+++ b/imaginary/Makefile
@@ -2,7 +2,7 @@ TOP = ..
 include $(TOP)/mk/boilerplate.mk
 
 SUBDIRS = bernouilli exp3_8 gen_regexps integrate paraffins primes queens \
-          rfib tak wheel-sieve1 wheel-sieve2 x2n1
+          rfib tak wheel-sieve1 wheel-sieve2 x2n1 kahan
 
 OTHER_SUBDIRS = digits-of-e1 digits-of-e2
 
