Ad-hoc nofib-analyse changes and SUPERCOMP_HC_OPTS

--- a/imaginary/Makefile
+++ b/imaginary/Makefile
@@ -1,10 +1,8 @@
 TOP = ..
 include $(TOP)/mk/boilerplate.mk
 
-SUBDIRS = bernouilli exp3_8 gen_regexps integrate paraffins primes queens \
+SUBDIRS = bernouilli digits-of-e1 digits-of-e2 exp3_8 gen_regexps integrate paraffins primes queens \
           rfib tak wheel-sieve1 wheel-sieve2 x2n1
-
-OTHER_SUBDIRS = digits-of-e1 digits-of-e2
 
 include $(TOP)/mk/target.mk
 
