--- a/spectral/integer/Makefile
+++ b/spectral/integer/Makefile
@@ -6,3 +6,5 @@ NORM_OPTS = -2100000000 4000001 2100000000
 SLOW_OPTS = -2100000000 4000001 2100000000
 
 include $(TOP)/mk/target.mk
+
+SRC_SUPERCOMP_HC_OPTS =
