--- a/spectral/secretary/Makefile
+++ b/spectral/secretary/Makefile
@@ -3,3 +3,5 @@ include $(TOP)/mk/boilerplate.mk
 -include opts.mk
 SRC_HC_OPTS += -fglasgow-exts
 include $(TOP)/mk/target.mk
+
+SRC_SUPERCOMP_HC_OPTS =
