--- a/supercompile/neil/Makefile
+++ b/supercompile/neil/Makefile
@@ -1,8 +1,10 @@
 TOP = ../..
 include $(TOP)/mk/boilerplate.mk
-SUBDIRS = SumSquare SumSquare-Explicit
+SUBDIRS = SumSquare
 
+# Covered by flag instead:
+#   SumSquare-Explicit
 # Worthless benchmark, runs too fast:
-# SumSquare-LazySum
+#   SumSquare-LazySum
 
 include $(TOP)/mk/target.mk
