Use a larger stack for spectral/hartel/event in slow mode

--- a/spectral/hartel/event/Makefile
+++ b/spectral/hartel/event/Makefile
@@ -5,7 +5,7 @@ SRC_HC_OPTS += -cpp -fglasgow-exts
 
 FAST_OPTS = 400000
 NORM_OPTS = 400000
-SLOW_OPTS = 1500000
+SLOW_OPTS = 1500000 +RTS -K20M -RTS
 
 include $(TOP)/mk/target.mk
 
