Removed some shootout benchmarks from under fibon
Newer versions (corresponding to what's currently on the shootout page)
have been added under nofib/shootout in an attempt to make these easier
to run.

--- a/fibon/Shootout/Makefile
+++ b/fibon/Shootout/Makefile
@@ -2,8 +2,7 @@ TOP = ../..
 include $(TOP)/mk/boilerplate.mk
 
 SSUBDIRS = \
-  BinaryTrees ChameneosRedux Fannkuch Mandelbrot \
-  Nbody Pidigits SpectralNorm
+  ChameneosRedux Fannkuch Mandelbrot \
   
 SUBDIRS = $(filter-out $(NOT_THESE), $(SSUBDIRS))
 
