Also fix reverse-compliment and k-nucleotide.
Signed-off-by: Austin Seipp <aseipp@pobox.com>

--- a/shootout/reverse-complement/Makefile
+++ b/shootout/reverse-complement/Makefile
@@ -19,8 +19,8 @@ HC_OPTS += -O2 -XBangPatterns -funfolding-use-threshold=32 -XMagicHash \
 #------------------------------------------------------------------
 # Create input
 
-fasta-c : ../fasta/fasta-c.o
-	gcc $< -o $@
+fasta-c : ../fasta/fasta-c.c
+	$(CC) -std=gnu99 -march=native -O3 -fomit-frame-pointer $< -o $@
 
 revcomp-input250000.txt : fasta-c
 	./fasta-c $(FAST_OPTS) > $@
