--- a/shootout/k-nucleotide/Makefile
+++ b/shootout/k-nucleotide/Makefile
@@ -14,8 +14,8 @@ HC_OPTS += -O2 -XBangPatterns -package bytestring
 #------------------------------------------------------------------
 # Create input
 
-fasta-c : ../fasta/fasta-c.o
-	gcc $< -o $@
+fasta-c : ../fasta/fasta-c.c
+	$(CC) -std=gnu99 -march=native -O3 -fomit-frame-pointer $< -o $@
 
 knucleotide-input250000.txt : fasta-c
 	./fasta-c $(FAST_OPTS) > $@
