nofib-analyse: Support comparing multiple runs in the summary table
and adjust the table layout to have at least one space padding, even
with long input file names.

--- a/nofib-analyse/Makefile
+++ b/nofib-analyse/Makefile
@@ -3,7 +3,7 @@ include $(TOP)/mk/boilerplate.mk
 
 PROG = nofib-analyse
 
-$(PROG):
+$(PROG): *.hs
 	$(BOOT_HC) -O -cpp --make Main -o $(PROG)
 
 all :: $(PROG)
