--- a/fibon/Hackage/Funsat/parsec/parsec.cabal
+++ b/fibon/Hackage/Funsat/parsec/parsec.cabal
@@ -53,4 +53,4 @@ library
     build-depends: mtl, bytestring
     extensions:	ExistentialQuantification, PolymorphicComponents, MultiParamTypeClasses, FlexibleInstances, FlexibleContexts, DeriveDataTypeable
     ghc-options:	-O2
-    ghc-prof-options:	-auto-all
+    ghc-prof-options:	-fprof-auto
