Fix nofib benchmarks on Windows.
Summary:
This allows nofib to run on Windows using `msys`.

Also deprecates the old `cygwin` stuff.

Test Plan: make clean && make

Reviewers: bgamari

Reviewed By: bgamari

Subscribers: RyanGlScott, #ghc_windows_task_force

Differential Revision: https://phabricator.haskell.org/D3030

--- a/shootout/reverse-complement/Makefile
+++ b/shootout/reverse-complement/Makefile
@@ -23,13 +23,13 @@ fasta-c : ../fasta/fasta-c.c
 	$(CC) -std=gnu99 -O3 -fomit-frame-pointer $< -o $@
 
 revcomp-input250000.txt : fasta-c
-	./fasta-c $(FAST_OPTS) > $@
+	./fasta-c $(FAST_OPTS) | tr -d '\r' > $@
 
 revcomp-input2500000.txt : fasta-c
-	./fasta-c $(NORM_OPTS) > $@
+	./fasta-c $(NORM_OPTS) | tr -d '\r' > $@
 
 revcomp-input25000000.txt : fasta-c
-	./fasta-c $(SLOW_OPTS) > $@
+	./fasta-c $(SLOW_OPTS) | tr -d '\r' > $@
 
 ifeq "$(mode)" "slow"
  INPUT_FILE = revcomp-input25000000.txt
