spectral: revive last-piece
Summary:
I'm not entirely sure if the benchmark is worth reviving, but
it was quite easy and we can always remove it later.

This also removed the unused PROG_ARGS from the Makefile.

Signed-off-by: Michal Terepeta <michal.terepeta@gmail.com>

Test Plan: compile & run

Reviewers: bgamari

Reviewed By: bgamari

Differential Revision: https://phabricator.haskell.org/D3042

--- a/spectral/Makefile
+++ b/spectral/Makefile
@@ -3,13 +3,13 @@ include $(TOP)/mk/boilerplate.mk
 
 SUBDIRS = ansi atom awards banner boyer boyer2 calendar cichelli circsim \
           clausify constraints cryptarithm1 cryptarithm2 cse eliza expert \
-          fft2 fibheaps fish gcd hartel integer knights lcss life mandel \
-          mandel2 minimax multiplier para power pretty primetest puzzle \
+          fft2 fibheaps fish gcd hartel integer knights last-piece lcss life \
+	  mandel mandel2 minimax multiplier para power pretty primetest puzzle \
           rewrite scc simple sorting sphere treejoin
 
 # compreals	no suitable test data
 # salishan	no Haskell code!
-OTHER_SUBDIRS = compreals lambda last-piece mate salishan secretary triangle
+OTHER_SUBDIRS = compreals lambda mate salishan secretary triangle
 
 include $(TOP)/mk/target.mk
 
