--- a/spectral/last-piece/Makefile
+++ b/spectral/last-piece/Makefile
@@ -1,11 +1,7 @@
 TOP = ../..
 include $(TOP)/mk/boilerplate.mk
 
-SRC_HC_OPTS += -package text -package data
-
-
-# Arguments for the test program
-PROG_ARGS = 8 3
+SRC_HC_OPTS += -package containers -package pretty
 
 include $(TOP)/mk/target.mk
 
