spectral: revive lambda
Summary:
Instead of using the hand rolled monads, this now uses monads from
`transformers` (shouldn't complicate running the benchmark, since it's
a boot library).

Signed-off-by: Michal Terepeta <michal.terepeta@gmail.com>

Test Plan: run nofib

Reviewers: bgamari

Reviewed By: bgamari

Differential Revision: https://phabricator.haskell.org/D3079

--- a/spectral/lambda/Makefile
+++ b/spectral/lambda/Makefile
@@ -1,6 +1,8 @@
 TOP = ../..
 include $(TOP)/mk/boilerplate.mk
 
+SRC_HC_OPTS += -package transformers
+
 # Arguments for the test program
 PROG_ARGS = 1600
 
