real: remove ebnf2ps
Summary:
The benchmark doesn't compile and even after fixing, it runs in about
0.006s. The compile time is super fast as well (tiny modules).  So it
seems like another candidate for removal.

Signed-off-by: Michal Terepeta <michal.terepeta@gmail.com>

Test Plan: run nofib

Reviewers: goldfire, bgamari

Reviewed By: bgamari

Differential Revision: https://phabricator.haskell.org/D3087

--- a/real/Makefile
+++ b/real/Makefile
@@ -7,7 +7,7 @@ SUBDIRS = anna bspt cacheprof compress compress2 fem fluid fulsom gamteb gg \
 
 # Omitted: 
 #	HMMS	binary file endian-ness problems
-OTHER_SUBDIRS = HMMS PolyGP ebnf2ps linear rx
+OTHER_SUBDIRS = HMMS PolyGP linear rx
 
 include $(TOP)/mk/target.mk
 
