spectral: remove salishan
There's no Haskell code in `spectral/salishan`, so let's just remove it.

Signed-off-by: Michal Terepeta <michal.terepeta@gmail.com>

Test Plan: build & run

Reviewers: bgamari

Subscribers: snowleopard

Differential Revision: https://phabricator.haskell.org/D3321

--- a/spectral/Makefile
+++ b/spectral/Makefile
@@ -8,8 +8,7 @@ SUBDIRS = ansi atom awards banner boyer boyer2 calendar cichelli circsim \
 	  puzzle rewrite scc simple sorting sphere treejoin
 
 # compreals	no suitable test data
-# salishan	no Haskell code!
-OTHER_SUBDIRS = compreals lambda last-piece salishan secretary triangle
+OTHER_SUBDIRS = compreals lambda last-piece secretary triangle
 
 include $(TOP)/mk/target.mk
 
