spectral: fix secretary
This should fix the benchmark by:
- Not importing `IOExts`.
- Using `randomRs` with a predictable seed instead of `randomRIOs` to
  make the runs reproducible (the latter is using global RNG).
- Bumping one of the parameter to make it run for a bit longer (2s
  instead of 0.4s).

Signed-off-by: Michal Terepeta <michal.terepeta@gmail.com>

Test Plan: build & run

Reviewers: bgamari

Differential Revision: https://phabricator.haskell.org/D3328

--- a/spectral/Makefile
+++ b/spectral/Makefile
@@ -5,10 +5,10 @@ SUBDIRS = ansi atom awards banner boyer boyer2 calendar cichelli circsim \
           clausify constraints cryptarithm1 cryptarithm2 cse eliza expert \
           fft2 fibheaps fish gcd hartel integer knights lambda last-piece lcss life \
 	  mandel mandel2 mate minimax multiplier para power pretty primetest \
-	  puzzle rewrite scc simple sorting sphere treejoin
+	  puzzle rewrite scc secretary simple sorting sphere treejoin
 
 # compreals	no suitable test data
-OTHER_SUBDIRS = compreals lambda last-piece secretary triangle
+OTHER_SUBDIRS = compreals lambda last-piece triangle
 
 include $(TOP)/mk/target.mk
 
