--- a/spectral/secretary/Makefile
+++ b/spectral/secretary/Makefile
@@ -1,5 +1,5 @@
 TOP = ../..
 include $(TOP)/mk/boilerplate.mk
 -include opts.mk
-SRC_HC_OPTS += -fglasgow-exts
+SRC_HC_OPTS += -package random
 include $(TOP)/mk/target.mk
