spectral: temporarily disable secretary
Summary:
Unfortunately `secretary` requires `random` package to compile and
this broke perf.haskell.org. Let's disable the benchmark for now until
we have a good story for dealing with benchmarks that require
packages.

Signed-off-by: Michal Terepeta <michal.terepeta@gmail.com>

Test Plan: build & run

Reviewers: bgamari, nomeata

Reviewed By: nomeata

Differential Revision: https://phabricator.haskell.org/D3347

--- a/spectral/Makefile
+++ b/spectral/Makefile
@@ -1,11 +1,12 @@
 TOP = ..
 include $(TOP)/mk/boilerplate.mk
 
+# TODO(michalt): Re-enable `secretary` (requires `random`)
 SUBDIRS = ansi atom awards banner boyer boyer2 calendar cichelli circsim \
           clausify constraints cryptarithm1 cryptarithm2 cse eliza expert \
           fft2 fibheaps fish gcd hartel integer knights lambda last-piece lcss life \
 	  mandel mandel2 mate minimax multiplier para power pretty primetest \
-	  puzzle rewrite scc secretary simple sorting sphere treejoin
+	  puzzle rewrite scc simple sorting sphere treejoin
 
 OTHER_SUBDIRS = lambda last-piece
 
